--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ pygame = "^2.1.2"
 dearpygui = "^1.6.2"
 scripts = "^3.0"
 django-locations-base = "^0.3.4"
+keyboard = "^0.13.5"
+getkey = "^0.6.5"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
