--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ scripts = "^3.0"
 django-locations-base = "^0.3.4"
 keyboard = "^0.13.5"
 getkey = "^0.6.5"
+numpy = "^1.26.4"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
